[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/player/bullet/bullet.gd" type="Script" id=1]
[ext_resource path="res://scenes/player/bullet/bullet.tres" type="SpriteFrames" id=2]

[sub_resource type="CircleShape2D" id=2]
radius = 20.5377

[node name="bullet" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 0.0676346, -0.609474 )
scale = Vector2( 3.53641, 3.57706 )

[connection signal="body_entered" from="." to="." method="_on_bullet_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
